--- a/code/app/andriod/Laundry/res/layout/misp_download_file.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_download_file.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/content_font_size_sm" />
 
     <ProgressBar
